checkbox spacing and label positioning issue

--- a/ViennaAdvantage/Areas/VA005/Contents/VA005_ProductMgt.css
+++ b/ViennaAdvantage/Areas/VA005/Contents/VA005_ProductMgt.css
@@ -822,8 +822,8 @@ margin-top: -55px;*/
 }
 .VA005-catboxcheck[type="checkbox"] {
     position: absolute;
-    top: 0px;
-    left: 5px;
+    top: 6px;
+    left: 10px;
     width: 20px;
     height: 20px;
 }
